--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,10 @@
       <p>Sit amet consectetur adipisicing elit. Pariatur dolor enim consectetur, esse nemo voluptatum nam ab repellendus repudiandae eum asperiores quasi nesciunt totam ullam soluta quo voluptate natus. Explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, aliquam. Sed aliquid quo labore, quis repellat aspernatur veniam at laudantium doloremque ut eos ipsum pariatur illum fugiat nisi corrupti natus!</p>
     </section>
     <section>
-      <h2>Title added for Testing</h2>
-      <img src="efe-kurnaz-RnCPiXixooY-unsplash.jpg" alt="">
-      <p>paragraphs1</p>
-      <p>paragraphs2</p>
+      <h2>Title added for Testing by Chet</h2>
+      <img src="images/efe-kurnaz-RnCPiXixooY-unsplash.jpg" alt="">
+      <p>Sit amet consectetur adipisicing elit. Pariatur dolor enim consectetur, esse nemo voluptatum nam ab repellendus repudiandae eum asperiores quasi nesciunt totam ullam soluta quo voluptate natus. Explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, aliquam. Sed aliquid quo labore, quis repellat aspernatur veniam at laudantium doloremque ut eos ipsum pariatur illum fugiat nisi corrupti natus!</p>
+      <p>Sit amet consectetur adipisicing elit. Pariatur dolor enim consectetur, esse nemo voluptatum nam ab repellendus repudiandae eum asperiores quasi nesciunt totam ullam soluta quo voluptate natus. Explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, aliquam. Sed aliquid quo labore, quis repellat aspernatur veniam at laudantium doloremque ut eos ipsum pariatur illum fugiat nisi corrupti natus!</p>
     </section>
   </div>
 </body>
